choreonoid_add_simple_controller(JoyInputController JoyInputController.cpp)
target_link_libraries(JoyInputController ${roscpp_LIBRARIES})

choreonoid_add_simple_controller(JointStateOutputController JointStateOutputController.cpp)
target_link_libraries(JointStateOutputController ${roscpp_LIBRARIES})

choreonoid_add_simple_controller(JointStateInputController JointStateInputController.cpp)
target_link_libraries(JointStateInputController ${roscpp_LIBRARIES})

choreonoid_add_simple_controller(ImuOutputController ImuOutputController.cpp)
target_link_libraries(ImuOutputController ${roscpp_LIBRARIES})

choreonoid_add_simple_controller(CameraImageOutputController CameraImageOutputController.cpp)
target_link_libraries(CameraImageOutputController ${roscpp_LIBRARIES} ${image_transport_LIBRARIES})
